[package]
name = "coverage-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.9.2"
env_logger = "0.10.0"
ropey = "1.6.0"
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
serde = { version = "1.0", features = ["derive"] }
dashmap = "5.5.1"
log = "0.4.20"
im-rc = "15.1.0"
chrono = { version = "0.4.26", features = ["serde"] }
lsp-types = "0.94.1"
mimalloc = "0.1.37"
quick-xml = "0.30.0"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
lcov = "0.8.1"

[build-dependencies]
cc="*"
